--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -32,7 +32,6 @@ the MIT License. See LICENSE in the project root for license information. -->
             <local:EmptyStringVisibilityConverter x:Key="CommandKeyChordVisibilityConverter"/>
             <local:EmptyStringVisibilityConverter x:Key="ParsedCommandLineTextVisibilityConverter"/>
             <local:EmptyStringVisibilityConverter x:Key="ParentCommandVisibilityConverter"/>
-            <local:HasNestedCommandsVisibilityConverter x:Key="HasNestedCommandsVisibilityConverter"/>
             <model:IconPathConverter x:Key="IconSourceConverter"/>
 
             <DataTemplate x:Key="GeneralItemTemplate" x:DataType="local:FilteredCommand">
@@ -94,14 +93,75 @@ the MIT License. See LICENSE in the project root for license information. -->
                                         AutomationProperties.AccessibilityView="Raw" />
                         </Border>
 
+                    </Grid>
+                </ListViewItem>
+            </DataTemplate>
+
+            <DataTemplate x:Key="NestedItemTemplate" x:DataType="local:FilteredCommand">
+
+                <!-- This HorizontalContentAlignment="Stretch" is important
+                        to make sure it takes the entire width of the line -->
+                <ListViewItem x:Uid="CommandPalette_MoreOptions"
+                              HorizontalContentAlignment="Stretch"
+                              AutomationProperties.Name="{x:Bind Item.Name, Mode=OneWay}"
+                              AutomationProperties.AcceleratorKey="{x:Bind Item.KeyChordText, Mode=OneWay}">
+
+                    <Grid HorizontalAlignment="Stretch" ColumnSpacing="8" >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="16"/>
+                            <!-- icon -->
+                            <ColumnDefinition Width="Auto"/>
+                            <!-- command label -->
+                            <ColumnDefinition Width="*"/>
+                            <!-- key chord -->
+                            <ColumnDefinition Width="16"/>
+                            <!-- gutter for scrollbar -->
+                        </Grid.ColumnDefinitions>
+
+                        <IconSourceElement
+                                    Grid.Column="0"
+                                    Width="16"
+                                    Height="16"
+                                    IconSource="{x:Bind Item.Icon,
+                                                        Mode=OneWay,
+                                                        Converter={StaticResource IconSourceConverter}}"/>
+
+                        <local:HighlightedTextControl
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Left"
+                                    Text="{x:Bind HighlightedName, Mode=OneWay}"/>
+
+                        <!-- The block for the key chord is only visible
+                                when there's actual text set as the label. See
+                                CommandKeyChordVisibilityConverter for details.
+                             We're setting the accessibility view on the
+                                border and text block to Raw because otherwise,
+                                Narrator will read out the key chord. Problem is,
+                                it already did that because it was the list item's
+                                "AcceleratorKey". It's redundant. -->
+                        <Border
+                                    Grid.Column="2"
+                                    Visibility="{x:Bind Item.KeyChordText,
+                                                 Mode=OneWay,
+                                                 Converter={StaticResource CommandKeyChordVisibilityConverter}}"
+                                    Style="{ThemeResource KeyChordBorderStyle}"
+                                    Padding="2,0,2,0"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    AutomationProperties.AccessibilityView="Raw">
+
+                            <TextBlock
+                                        Style="{ThemeResource KeyChordTextBlockStyle}"
+                                        FontSize="12"
+                                        Text="{x:Bind Item.KeyChordText, Mode=OneWay}"
+                                        AutomationProperties.AccessibilityView="Raw" />
+                        </Border>
+
                         <!-- xE70E is ChevronUp. Rotated 90 degrees, it's _ChevronRight_ -->
                         <FontIcon
                                     FontFamily="Segoe MDL2 Assets"
                                     Glyph="&#xE70E;"
                                     HorizontalAlignment="Right"
-                                    Visibility="{x:Bind Item,
-                                                 Mode=OneWay,
-                                                 Converter={StaticResource HasNestedCommandsVisibilityConverter}}"
                                     Grid.Column="2">
 
                             <FontIcon.RenderTransform>
@@ -191,7 +251,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                 </ListViewItem>
             </DataTemplate>
 
-            <local:PaletteItemTemplateSelector x:Key="PaletteItemTemplateSelector" TabItemTemplate="{StaticResource TabItemTemplate}" GeneralItemTemplate="{StaticResource GeneralItemTemplate}"/>
+            <local:PaletteItemTemplateSelector x:Key="PaletteItemTemplateSelector"
+                                               TabItemTemplate="{StaticResource TabItemTemplate}"
+                                               GeneralItemTemplate="{StaticResource GeneralItemTemplate}"
+                                               NestedItemTemplate="{StaticResource NestedItemTemplate}"/>
 
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
