Represent font face as a combo box in SUI (#9275)
## Summary of the Pull Request

This replaces the Profiles > Font Face text box with a combo box.

## References
#6800 - Settings UI Epic

## Detailed Description of the Pull Request / Additional comments

- Enumerating the fonts
  - [This doc](https://docs.microsoft.com/en-us/windows/win32/directwrite/font-enumeration) was the main reference used to enumerate the fonts. It was mildly adapted to use WinRT instead of WRL.
- Updating the UI
  - Similar to other combo box settings, `Profiles` keeps a reference to the current value. We use that as a way to update the settings model. If an invalid value is used, we fallback to `Cascadia Mono`.
  - A checkbox was added to let the user select from all of the installed fonts, or just the monospace ones.

## Demo
![Font Face Combo Box Demo](https://user-images.githubusercontent.com/11050425/109342917-6cd3b600-7821-11eb-8df9-fb988b037e02.gif)

--- a/src/cascadia/TerminalSettingsEditor/Profiles.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles.xaml
@@ -25,6 +25,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                 <TextBlock Text="{x:Bind EnumName, Mode=OneWay}"/>
             </DataTemplate>
 
+            <DataTemplate x:DataType="local:Font" x:Key="FontFaceComboBoxItemTemplate">
+                <TextBlock Text="{x:Bind LocalizedName}" FontFamily="{x:Bind Name}"/>
+            </DataTemplate>
+
             <local:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
             <local:PercentageConverter x:Key="PercentageConverter"/>
             <local:FontWeightConverter x:Key="FontWeightConverter"/>
@@ -234,8 +238,27 @@ the MIT License. See LICENSE in the project root for license information. -->
                                                     HasSettingValue="{x:Bind State.Profile.HasFontFace, Mode=OneWay}"
                                                     ClearSettingValue="{x:Bind State.Profile.ClearFontFace}"
                                                     SettingOverrideSource="{x:Bind State.Profile.FontFaceOverrideSource, Mode=OneWay}">
-                                <TextBox Text="{x:Bind State.Profile.FontFace, Mode=TwoWay}"
-                                         Style="{StaticResource TextBoxSettingStyle}"/>
+                                <StackPanel>
+                                    <!--Binding the ItemsSource to a separate variable that switches between the
+                                          two font lists causes a crash within the ComboBox code.
+                                        As a workaround, introduce two ComboBox controls and only display one at a time.-->
+                                    <ComboBox ItemsSource="{x:Bind State.Profile.MonospaceFontList, Mode=OneWay}"
+                                              SelectedItem="{x:Bind CurrentFontFace, Mode=OneWay}"
+                                              SelectionChanged="FontFace_SelectionChanged"
+                                              Style="{StaticResource ComboBoxSettingStyle}"
+                                              ItemTemplate="{StaticResource FontFaceComboBoxItemTemplate}"
+                                              Visibility="{x:Bind State.Profile.ShowAllFonts, Mode=OneWay, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"/>
+                                    <ComboBox ItemsSource="{x:Bind State.Profile.CompleteFontList, Mode=OneWay}"
+                                              SelectedItem="{x:Bind CurrentFontFace, Mode=OneWay}"
+                                              SelectionChanged="FontFace_SelectionChanged"
+                                              Style="{StaticResource ComboBoxSettingStyle}"
+                                              ItemTemplate="{StaticResource FontFaceComboBoxItemTemplate}"
+                                              Visibility="{x:Bind State.Profile.ShowAllFonts, Mode=OneWay}"/>
+                                    <CheckBox x:Uid="Profile_FontFaceShowAllFonts"
+                                              x:Name="ShowAllFontsCheckbox"
+                                              IsChecked="{x:Bind State.Profile.ShowAllFonts, Mode=TwoWay}"
+                                              IsEnabled="{x:Bind State.Profile.UsingMonospaceFont, Mode=OneWay}"/>
+                                </StackPanel>
                             </local:SettingContainer>
 
                             <!--Font Size-->
