[Settings UI] Represent Cursor Height as a slider (#9386)
Change the vintage cursor height number box to a slider.

## References
Related:  #9370

## PR Checklist
* [x] Closes #9377
* [x] zadjii-msft edit: Now _this one_ closes #9175
* [x] CLA signed. If not, go over [here](https://cla.opensource.microsoft.com/microsoft/Terminal) and sign the CLA
* [x] Schema updated.
* [ ] 

## Detailed Description of the Pull Request / Additional comments

It seems like the cursor height couldn't be lower than 25 percent regardless of the given value, so I've changed the `MinCursorHeightPercent` in CustomTextRenderer header file.

## Validation Steps Performed
Manual validation

![CursorHeightSlider](https://user-images.githubusercontent.com/39456018/110041939-bf076080-7d66-11eb-8d58-ba9a84922803.gif)

--- a/src/cascadia/TerminalSettingsEditor/Profiles.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles.xaml
@@ -341,12 +341,20 @@ the MIT License. See LICENSE in the project root for license information. -->
                                                     ClearSettingValue="{x:Bind State.Profile.ClearCursorHeight}"
                                                     SettingOverrideSource="{x:Bind State.Profile.CursorHeightOverrideSource, Mode=OneWay}"
                                                     Visibility="{x:Bind IsVintageCursor, Mode=OneWay}">
-                                <muxc:NumberBox Value="{x:Bind State.Profile.CursorHeight, Mode=TwoWay}"
-                                                Style="{StaticResource NumberBoxSettingStyle}"
-                                                Minimum="1"
-                                                Maximum="100"
-                                                SmallChange="1"
-                                                LargeChange="10"/>
+                                <Grid Style="{StaticResource CustomSliderControlGridStyle}">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Slider x:Name="CursorHeightSlider"
+                                            Grid.Column="0"
+                                            Minimum="1"
+                                            Maximum="100"
+                                            Value="{x:Bind State.Profile.CursorHeight, Mode=TwoWay}"/>
+                                    <TextBlock Grid.Column="1"
+                                               Text="{Binding ElementName=CursorHeightSlider, Path=Value, Mode=OneWay}"
+                                               Style="{StaticResource SliderValueLabelStyle}"/>
+                                </Grid>
                             </local:SettingContainer>
                         </StackPanel>
 
