Allow shift+click on a profile to open a new window (#9429)
<!-- Enter a brief description/summary of your PR here. What does it fix/what does it change/how was it tested (even manually, if necessary)? -->
## Summary of the Pull Request
Shift+click on a profile to open a new wt window with that profile. Or, shift+click on the '+' button to open a new wt window with the default profile. 

<!-- Please review the items on the PR checklist before submitting-->
## PR Checklist
* [x] Closes #9395 
* [x] CLA signed. If not, go over [here](https://cla.opensource.microsoft.com/microsoft/Terminal) and sign the CLA
* [ ] Tests added/passed
* [ ] Documentation updated. If checked, please file a pull request on [our docs repo](https://github.com/MicrosoftDocs/terminal) and link it here: #xxx
* [ ] Schema updated.
* [x] I work here

<!-- Describe how you validated the behavior. Add automated tests wherever possible, but list manual validation steps taken as well -->
## Validation Steps Performed
Manual testing

--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -37,10 +37,11 @@ the MIT License. See LICENSE in the project root for license information. -->
                 <ToolTipService.ToolTip>
                     <ToolTip Placement="Mouse">
                         <TextBlock IsTextSelectionEnabled="False">
-                            <Run x:Uid="NewTabRun"/> <LineBreak />
+                            <Run x:Uid="NewTabRun"/> <LineBreak/>
                             <Run x:Uid="NewPaneRun"
-                                 FontStyle="Italic">
-                            </Run>
+                                 FontStyle="Italic"/> <LineBreak/>
+                            <Run x:Uid="NewWindowRun"
+                                 FontStyle="Italic"/>
                         </TextBlock>
                     </ToolTip>
                 </ToolTipService.ToolTip>
