--- a/src/cascadia/TerminalApp/App.xaml
+++ b/src/cascadia/TerminalApp/App.xaml
@@ -44,8 +44,8 @@
                     <SolidColorBrush x:Name="ErrorTextBrush"
                                      Color="{ThemeResource SystemErrorTextColor}" />
 
-                    <!--  Suppress all padding except left around the tabs. The TabView looks far better like this.  -->
-                    <Thickness x:Key="TabViewHeaderPadding">8,0,0,0</Thickness>
+                    <!--  Suppress top padding  -->
+                    <Thickness x:Key="TabViewHeaderPadding">8,0,8,0</Thickness>
 
                     <ResourceDictionary.ThemeDictionaries>
                         <ResourceDictionary x:Key="Dark">
