--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -126,6 +126,22 @@
                          Title="{x:Bind WindowIdForDisplay}"
                          x:Load="False"
                          IsLightDismissEnabled="True"
-                         Subtitle="{x:Bind WindowNameForDisplay}" />
+                         Subtitle="{x:Bind WindowNameForDisplay, Mode=OneWay}" />
+
+        <mux:TeachingTip x:Name="RenameFailedToast"
+                         x:Uid="RenameFailedToast"
+                         x:Load="False"
+                         IsLightDismissEnabled="True" />
+
+        <mux:TeachingTip x:Name="WindowRenamer"
+                         x:Uid="WindowRenamer"
+                         Title="{x:Bind WindowIdForDisplay}"
+                         x:Load="False"
+                         ActionButtonClick="_WindowRenamerActionClick">
+            <mux:TeachingTip.Content>
+                <TextBox x:Name="WindowRenamerTextBox"
+                         Text="{x:Bind WindowName, Mode=OneWay}" />
+            </mux:TeachingTip.Content>
+        </mux:TeachingTip>
     </Grid>
 </Page>
