Stylize the renamer Action button as a Accent button (#9728)
Closes #9719

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -137,7 +137,8 @@
                          x:Uid="WindowRenamer"
                          Title="{x:Bind WindowIdForDisplay}"
                          x:Load="False"
-                         ActionButtonClick="_WindowRenamerActionClick">
+                         ActionButtonClick="_WindowRenamerActionClick"
+                         ActionButtonStyle="{ThemeResource AccentButtonStyle}">
             <mux:TeachingTip.Content>
                 <TextBox x:Name="WindowRenamerTextBox"
                          KeyUp="_WindowRenamerKeyUp"
