Fix tab and hyperlink tooltips to wrap long text (#9913)
## PR Checklist
* [x] Closes https://github.com/microsoft/terminal/issues/9869
* [x] CLA signed. 
* [ ] Tests added/passed
* [ ] Documentation updated. 
* [ ] Schema updated.
* [ ] I've discussed this with core contributors already.

--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -60,7 +60,8 @@
                             <ToolTipService.ToolTip>
                                 <ToolTip x:Name="LinkTip"
                                          Placement="Mouse">
-                                    <TextBlock IsTextSelectionEnabled="True">
+                                    <TextBlock IsTextSelectionEnabled="True"
+                                               TextWrapping="Wrap">
                                         <Run x:Name="HoveredUri" /> <LineBreak />
                                         <Run x:Uid="HowToOpenRun"
                                              FontStyle="Italic" />
